# pte

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  elements.json  pte_bash_completion
doc/: manpage.1
lib/: CMakeLists.txt
res/: elements.json  json-to-H.sh
src/: CMakeLists.txt  elements.c  elements.h  pte.c  pte.h
src/printers/: CMakeLists.txt  printer-default.c  printer-default.h  printer-json.c  printer-json.h
src/util/: CMakeLists.txt  util-file.c  util-file.h
